social links added

--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -11,9 +11,9 @@
                   <h1>Hi</br>Py</h1>
               </div>
               <div class="col-sm-6 right">
-                  <a href="" target="_blank"><i class="fa fa-facebook-square fa-5x sm-icon" aria-hidden="true"></i></a>
-                  <a href="" target="_blank"><i class="fa fa-twitter-square fa-5x sm-icon" aria-hidden="true"></i></a>
-                  <a href="" target="_blank"><i class="fa fa-github-square fa-5x sm-icon" aria-hidden="true"></i></a>
+                  <a href="https://facebook.com/hipyliv" target="_blank"><i class="fa fa-facebook-square fa-5x sm-icon" aria-hidden="true"></i></a>
+                  <a href="https://twitter.com/hipyliv" target="_blank"><i class="fa fa-twitter-square fa-5x sm-icon" aria-hidden="true"></i></a>
+                  <a href="https://github.com/hipyliv" target="_blank"><i class="fa fa-github-square fa-5x sm-icon" aria-hidden="true"></i></a>
                   </br>
                   <h2>Wed 10 Aug</h2>
                   <h3>CTL G-Flex (Ground Floor)</h3>
