--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -3,25 +3,30 @@
 
 {% block content %}
 
+
+
 <div class="jumbotron">
+     <a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a> 
   <div class="container">
       <div class="row">
           <div class="col-sm-10 col-sm-offset-1">
-              <div class="col-sm-6">
-                  <h1>Hi</br>Py</h1>
-              </div>
-              <div class="col-sm-6 right">
-                  <a href="https://facebook.com/hipyliv" target="_blank"><i class="fa fa-facebook-square fa-5x sm-icon" aria-hidden="true"></i></a>
-                  <a href="https://twitter.com/hipyliv" target="_blank"><i class="fa fa-twitter-square fa-5x sm-icon" aria-hidden="true"></i></a>
-                  <a href="https://github.com/hipyliv" target="_blank"><i class="fa fa-github-square fa-5x sm-icon" aria-hidden="true"></i></a>
-                  </br>
-                  <h2>Wed 10 Aug</h2>
-                  <h3>CTL G-Flex (Ground Floor)</h3>
-                  <h3>3 - 6 pm</h3>
-              </div>
+                  <h1>HiPy</h1>
+                  <h2>Let's build a web app!</h2>
           </div>
       </div>
   </div>
+</div>
+
+<div class="container">
+  <div class="row" style="text-align:center;">
+      <div class="col-sm-10 col-sm-offset-1">
+              <a href="https://facebook.com/hipyliv" target="_blank"><i class="fa fa-facebook-square fa-4x sm-icon" aria-hidden="true"></i></a>
+              <a href="https://twitter.com/hipyliv" target="_blank"><i class="fa fa-twitter-square fa-4x sm-icon" aria-hidden="true"></i></a>
+              <a href="https://github.com/hipyliv" target="_blank"><i class="fa fa-github-square fa-4x sm-icon" aria-hidden="true"></i></a>
+      </div>
+  </div>
+</div>
+
 </div>
 
 {% endblock %}
