--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -6,27 +6,59 @@
 
 
 <div class="jumbotron">
-     <a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a> 
+     <a href="https://github.com/hipyliv/web"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a> 
   <div class="container">
       <div class="row">
           <div class="col-sm-10 col-sm-offset-1">
                   <h1>HiPy</h1>
                   <h2>Let's build a web app!</h2>
+                  <a href="https://facebook.com/hipyliv" target="_blank"><i class="fa fa-facebook-square fa-4x sm-icon" aria-hidden="true"></i></a>
+                  <a href="https://twitter.com/hipyliv" target="_blank"><i class="fa fa-twitter-square fa-4x sm-icon" aria-hidden="true"></i></a>
+                  <a href="https://github.com/hipyliv" target="_blank"><i class="fa fa-github-square fa-4x sm-icon" aria-hidden="true"></i></a>
           </div>
       </div>
   </div>
 </div>
 
-<div class="container">
-  <div class="row" style="text-align:center;">
-      <div class="col-sm-10 col-sm-offset-1">
-              <a href="https://facebook.com/hipyliv" target="_blank"><i class="fa fa-facebook-square fa-4x sm-icon" aria-hidden="true"></i></a>
-              <a href="https://twitter.com/hipyliv" target="_blank"><i class="fa fa-twitter-square fa-4x sm-icon" aria-hidden="true"></i></a>
-              <a href="https://github.com/hipyliv" target="_blank"><i class="fa fa-github-square fa-4x sm-icon" aria-hidden="true"></i></a>
-      </div>
-  </div>
+<div class = "container">
+   <div class="row">
+       <div class="col-md-10 col-md-offset-1">
+           <div class="col-md-6">
+               <h2>Two birds, one stone ...</h2>
+               <ol>
+                   <li>We need a website for our <strong>resources</strong> and to <strong>promote</strong> HiPy</li>
+                   <li>You want to learn how to use Python to build <strong>web apps</strong></li>
+               </ol>
+               <p><strong>So, let's get started!</strong></p>
+               <p>Head on over to the <a href="https://github.com/hipyliv">HiPy GitHub</a> now and fork the 'web' repo.</p>
+           </div>
+           <div class="col-md-6">
+               <h2>What will I learn?</h2>
+               <ul>
+                   <li>Python (Obviously)</li>
+                   <li><a href="https://www.djangoproject.com/">Django Web Framework</a></li>
+                   <li>HTML & CSS</li>
+                   <li>A pinch of javascript</li>
+                   <li>Git & GitHub</li>
+               </ul>
+               <h2>Resources</h2>
+               <ul>
+                   <li><a href="https://mikesdjangotutorials.co.uk/" target="_blank">Mike Hibbert's Learn Django Like A Pro</a></li>
+                   <li><a href="http://www.tangowithdjango.com/" target="_blank">Tango With Django (Awesome)</a></li>
+                   <li><a href="https://hellowebapp.com/" target="_blank">Tracy Osborn's Hello Web App books (perfection)</a></li>
+               </ul>
+           </div>
+           </div>
+       </div>
+   </div>
 </div>
 
+<div class = "container">
+   <div class="row" style="text-align: center; color: grey">
+       <hr>
+       <p>Copyright HiPy 2016</p>
+   <div>
 </div>
+
 
 {% endblock %}
