edit to index.html

--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -10,11 +10,11 @@
   <div class="container">
       <div class="row">
           <div class="col-sm-10 col-sm-offset-1">
-                  <h1>HiPy</h1>
-                  <h2>Let's build a web app!</h2>
-                  <a href="https://facebook.com/hipyliv" target="_blank"><i class="fa fa-facebook-square fa-4x sm-icon" aria-hidden="true"></i></a>
-                  <a href="https://twitter.com/hipyliv" target="_blank"><i class="fa fa-twitter-square fa-4x sm-icon" aria-hidden="true"></i></a>
-                  <a href="https://github.com/hipyliv" target="_blank"><i class="fa fa-github-square fa-4x sm-icon" aria-hidden="true"></i></a>
+                  <h1>Tauc Plotting</h1>
+                  <h2>A webapp by <a href="http://solidstatedesign.co.uk" target="_target">Solid State Design</a>.</h2>
+                  <a href="https://facebook.com/solstatdes" target="_blank"><i class="fa fa-facebook-square fa-4x sm-icon" aria-hidden="true"></i></a>
+                  <a href="https://twitter.com/solstatdes" target="_blank"><i class="fa fa-twitter-square fa-4x sm-icon" aria-hidden="true"></i></a>
+                  <a href="https://github.com/solstatdes" target="_blank"><i class="fa fa-github-square fa-4x sm-icon" aria-hidden="true"></i></a>
           </div>
       </div>
   </div>
@@ -23,30 +23,6 @@
 <div class = "container">
    <div class="row">
        <div class="col-md-10 col-md-offset-1">
-           <div class="col-md-6">
-               <h2>Two birds, one stone ...</h2>
-               <ol>
-                   <li>We need a website for our <strong>resources</strong> and to <strong>promote</strong> HiPy</li>
-                   <li>You want to learn how to use Python to build <strong>web apps</strong></li>
-               </ol>
-               <p><strong>So, let's get started!</strong></p>
-               <p>Head on over to the <a href="https://github.com/hipyliv">HiPy GitHub</a> now and fork the 'web' repo.</p>
-           </div>
-           <div class="col-md-6">
-               <h2>What will I learn?</h2>
-               <ul>
-                   <li>Python (Obviously)</li>
-                   <li><a href="https://www.djangoproject.com/">Django Web Framework</a></li>
-                   <li>HTML & CSS</li>
-                   <li>A pinch of javascript</li>
-                   <li>Git & GitHub</li>
-               </ul>
-               <h2>Resources</h2>
-               <ul>
-                   <li><a href="https://mikesdjangotutorials.co.uk/" target="_blank">Mike Hibbert's Learn Django Like A Pro</a></li>
-                   <li><a href="http://www.tangowithdjango.com/" target="_blank">Tango With Django (Awesome)</a></li>
-                   <li><a href="https://hellowebapp.com/" target="_blank">Tracy Osborn's Hello Web App books (perfection)</a></li>
-               </ul>
            </div>
            </div>
        </div>
@@ -56,7 +32,7 @@
 <div class = "container">
    <div class="row" style="text-align: center; color: grey">
        <hr>
-       <p>Copyright HiPy 2016</p>
+       <p>Copyright Solid State Design 2016</p>
    <div>
 </div>
 
