--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -23,7 +23,15 @@
 <div class = "container">
    <div class="row">
        <div class="col-md-10 col-md-offset-1">
+           <div>
+               {{ data }}
            </div>
+           </div>
+               <form name="file-form" enctype="multipart/form-data" action = "{% url 'index' %}" method="POST">
+                   {% csrf_token %}
+                   {{ form }}
+                   <input type="submit" value="Upload"/>
+               </form>
            </div>
        </div>
    </div>
