parse_data | basic return

--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -26,4 +26,9 @@
         {% block content %}{% endblock %}
 
     </body>
+
+    <script>
+        {% block script %}
+        {% endblock %}
+    </script>
 </html>
