--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -23,7 +23,8 @@
 <div class = "container">
    <div class="row">
        <div class="col-md-10 col-md-offset-1">
-           </div>
+           <div class="col-sm-8" id="out-chart"></div>
+           <div class="col-sm-3">
                <form name="file-form" enctype="multipart/form-data" action = "{% url 'index' %}" method="POST">
                    {% csrf_token %}
                    {{ form }}
@@ -43,5 +44,10 @@
 {% endblock %}
 
 {% block script %}
-    data = {{ data }}
+    <script src ="{% static 'js/plot.js' %}"></script>
+
+    <script>
+        data = {{ data }}
+        plot({{ data }})
+    </script>
 {% endblock %}
