--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -45,9 +45,11 @@
 
 {% block script %}
     <script src ="{% static 'js/plot.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <script>
         data = {{ data }}
-        plot({{ data }})
+        plot({{ data }}, "out-chart")
     </script>
 {% endblock %}
